# africa-offline-os

./: .coverage  .env  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  OFFLINE_FIRST_CSS_FIX.md  README.md  SIDEBAR_100_PERCENT_COMPLIANT.md  SIDEBAR_COMPLIANCE_AUDIT.md  aos.db  aos.db-shm  aos.db-wal  aos_tokens.json  apply_migrations.py  backfill_slugs.py  check_broadcast_status.py  check_db.py  check_prod_codes.py  check_prod_db.py  check_prod_slugs.py  check_rccg_code.py  check_roles.py  check_schema.py  check_slugs.py  check_templates.py  check_test_code.py  check_umoja.py  check_users.py  collect_results.txt  collection_debug.txt  collection_errors.txt  create_test_admin.py  debug_community_filters.py  debug_imports.py  debug_output.txt  debug_output_2.txt  debug_rbac.py  debug_sig.py  (+38 more)
aos/: __init__.py  main.py
aos/adapters/: __init__.py  base.py  channel.py  domain_router.py  remote_node.py  sms.py  telegram.py  telegram_gateway.py  telegram_polling.py  telegram_state.py  ussd.py
aos/api/: __init__.py  app.py  dependencies.py  state.py
aos/bus/: __init__.py  dispatcher.py  event_store.py  events.py  queue.py  scheduler.py
aos/core/: __init__.py  adapter.py  config.py  health.py  lifecycle.py  module.py
aos/db/: __init__.py  engine.py  models.py  repository.py
aos/modules/: __init__.py  agri.py  agri_sms.py  agri_ussd.py  base.py  community.py  community_ussd.py  transport.py  transport_sms.py  transport_ussd.py
aos/scheduler/: __init__.py
aos/scripts/: backup_db.py  create_admin.py  design_compliance.py  grant_admin.py  seed_transport_v2_simulation.py  seed_transport_zones.py  telegram_polling_start.py  verify_transport.py
aos/testing/: __init__.py  fault_injection.py
aos/tests/: __init__.py  test_adapter_contract.py  test_auth_logout.py  test_bus.py  test_bus_core.py  test_config.py  test_crash_recovery.py  test_create_app.py  test_db.py  test_db_resilience.py  test_entrypoint.py  test_event_persistence.py  test_farmer_encryption.py  test_fault_injection.py  test_forensics_enhanced.py  test_health.py  test_import_app.py  (+6 more)
aos_venv/: pyvenv.cfg
docs/: 00_VISION_AND_STRATEGY.md  01_roles.md  02_ROADMAP.md  03_REALITY_CHECK.md  04_INTELLIGENCE_JOURNAL.md  05_AUDIT_AGRI_VEHICLE.md  06_MESSAGING_AND_CHANNELS.md  06_TELEGRAM_BOT_INTEGRATION.md  07_ADMIN_CONSOLE.md  A-OS_PITCH_MASTER_GUIDE.md  AI_GUARDRAILS.md  AUDIT_REPORT_2025-12-30.md  DEPENDENCY_UPDATE_CHECKER.md  FAANG_COMPLIANCE_REPORT.md  INTELLIGENCE_JOURNAL.md  OPERATOR_ROLE_GUIDE.md  RBAC_ACCESS_MATRIX.md  RBAC_SPRINT_COMPLIANCE_REPORT.md  REALITY_CHECK.md  ROADMAP.md  TDD_PREVENTION_GUIDE.md  raspberry_hardware.md
scripts/: aos.service  cleanup_duplicates.py  install.sh  seed_community_groups.py
tests/: test_telegram_adapter.py  test_telegram_polling.py
(+220 files in other folders)
